| Summary: | ASTERISK-27936: res_pjsip_session doesn't update media when a 200 comes in with a different port than a 183 | ||
| Reporter: | George Joseph (gjoseph) | Labels: | pjsip |
| Date Opened: | 2018-06-22 15:33:52 | Date Closed: | 2018-06-28 06:09:25 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 13.21.0 15.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Some UASs provide custom ringback or other early media on a dedicated port. They send a 183 progress message with an SDP answer that has the early media port as the audio port. When the call is connected, they then send back a 200 OK also with an SDP that now has the final media port as the audio port.
res_pjsip_session doesn't get notified of the updated media because pjproject only notifies Asterisk if the To tag is different on the 200 than on the 183 (forked INVITE). | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-06-28 06:09:25.687-0500 Change 9200 merged by Jenkins2: res_pjsip_session: Add ability to accept multiple sdp answers [https://gerrit.asterisk.org/9200|https://gerrit.asterisk.org/9200] By: Friendly Automation (friendly-automation) 2018-06-28 06:18:05.694-0500 Change 9276 merged by Jenkins2: res_pjsip_session: Add ability to accept multiple sdp answers [https://gerrit.asterisk.org/9276|https://gerrit.asterisk.org/9276] By: Friendly Automation (friendly-automation) 2018-06-28 06:35:36.408-0500 Change 9277 merged by Jenkins2: res_pjsip_session: Add ability to accept multiple sdp answers [https://gerrit.asterisk.org/9277|https://gerrit.asterisk.org/9277] | ||